<?xml version="1.0"?>
<package format="2">
  <name>rcljava</name>
  <version>0.0.3</version>
  <description>Package containing the Java client.</description>
  <author email="esteve@apache.org">Esteve Fernandez</author>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jars</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jni_libraries</buildtool_depend>
  <buildtool_depend>rcljava_common</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rosidl_generator_c</build_depend>
  <build_depend>rosidl_typesupport_c</build_depend>
  <build_export_depend>builtin_interfaces</build_export_depend>
  <build_export_depend>rcl_interfaces</build_export_depend>
  <build_export_depend>rmw</build_export_depend>
  <build_export_depend>rosidl_runtime_c</build_export_depend>
  <build_export_depend>rosidl_generator_java</build_export_depend>
  <build_export_depend>rosidl_typesupport_c</build_export_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rcl</exec_depend>
  <exec_depend>rmw_implementation_cmake</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rosidl_runtime_c</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>builtin_interfaces</test_depend>
  <test_depend>rcl_interfaces</test_depend>
  <test_depend>rcljava_common</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>
  <test_depend>rmw</test_depend>
  <test_depend>rosidl_runtime_c</test_depend>
  <!--TODO(ivanpauno): we need this for some strange reason to make test builds-->
  <test_depend>rosidl_generator_cpp</test_depend>
  <test_depend>rosidl_generator_java</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
